# Pypi-Project-Template

./: .gitignore  .gitlab-ci.yml  README.md  badge_jobs.gitlab-ci.yml  ci-template.yml  docstring_template  generate_badge.py  nitpick-style.toml  pypi_jobs.gitlab-ci.yml  pyproject.toml  setup.cfg
.gitlab/merge_request_templates/: Default.md  template20220319.md
ci-templates/: build.gitlab-ci.yml  deploy.gitlab-ci.yml  docs.gitlab-ci.yml  install-poetry-before-script.gitlab-ci.yml  publish.gitlab-ci.yml  snippets.gitlab-ci.yml  test.gitlab-ci.yml
docs/source/: api.rst  conf.py  index.rst  license.rst
example_project/: __init__.py  test_ci.py
nitpick-style/: coverage.toml  lint.toml
