[tool.poetry]
name = "example-project"
version = "0.1.0"
description = ""
authors = ["Jsaon Lin <jsaonlin@aetherai.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "^3.0.0"
wemake-python-styleguide = ">=0.17"
importlib-metadata = "<5"
Sphinx = "^5.3.0"
sphinx-immaterial = "^0.11.0"

[tool.nitpick]
style = [
    "./nitpick-style/lint.toml",
    "./nitpick-style/coverage.toml",
]
cache = "never"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
